--- a/VRChat/41/1097441.html
+++ b/VRChat/41/1097441.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "DSTUJ+a+AVBnf7WVtoYGloWfKzO37BRHG4l91/XrH+c="></script>
+    "KI5m2UgK+oJuSWdMBswKZ58CP+ZvhLMe2KfzpKjH25o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅたんbot VoicePack Vol.1","description":"おきゅみんのみんなから寄せられた「収録してほしいセリフ」を、「パルマ―！」とか「おきゅぅぅぅぅ！」ってどう言ったらいいの！？　と悪戦苦闘しながら深夜に収録した、おきゅたんbotの声データ集です！ \n\nHEARTalk用にいろんな声の高さのバリエーションが入ってたりも。\n\nやってみて声優さんは本当にすごいなって思いました。ノイズも入ってるけど、あまり気にしないでね。\n\nそれから、そうそう。マスコットアプリ文化祭2018には「VRすきまガールズ/おきゅたん」も参加しているので、よかったら作品作りに活用してみてくださーい！\nhttps://pronama.jp/2018/10/09/oculustan/\n\n\n-------------------------------------\n★ 利用条件について\n\n「おきゅたんbot VoicePack Vol.1」に入っている声データ一式は、アプリや動画、各種作品で商用、非商用問わず、下記条件の元、自由に使えるよ。\n\n・クレジット表記は不要だけど、作品のどこか、もしくはSNSなどで「おきゅたんbotのボイスファイル Vol.1」を使用したとか、リンクを示していただけるとハッピーだよ。\n\n・おきゅたんに関連した二次創作として利用する場合は、\nおきゅたんbot公式ページのQ\u0026Aのページを必ず確認して従ってね。\nhttps://ocutanbot.wixsite.com/ocutan/faq\n\n※二次創作に、とても優しい条件だよ。\n※応援したいので、作品についてのお知らせも大歓迎！\n\n・でもおきゅたんbotになりすましたり、公式作品と誤解するような利用や、キャラクターや関わる人、ファンを貶めたり迷惑行為をするのは悲しいのでやめてね。（ただ、わたしが冗談と笑える範囲だったり、おきゅたんbotとは別の存在とわかるような形で、ソーシャルVRやワールドなどで音声を利用したりはOKだよ）\n\n・おきゅたん/おきゅたんbot以外のキャラクターの声や\nナレーションとして使用してもいいよ？（使えるものならね！　おきゅっ）\n\n・反社会的な行為や宗教、政治的な主張を行う目的での利用は禁止だからね。\n\n・よく分からない点については気軽に相談してね。\n\n\n例）\n\nおきゅたん人形におきゅたんとしてしゃべらせる→OK\n\nアプリでおきゅたんbotがしゃべってるふうに演出する→OK\n\nおきゅたんアバターになり、おきゅたんbot本人のふりしてまわりに誤解させたままにする→NG\n\nおきゅたんアバターで一瞬本人に思わせて、実は違いまーす的な冗談として使う→OK\n\nワールドの仕掛けや音声案内に使う（使えるの？）→OK \n\n音楽素材に使う→OK\n\nおきゅたん以外の声として使う→OK\n\n迷惑行為に使う→NG\n\n聞いてほくそ笑む→OK💦","url":"https://booth.pm/ja/items/1097441","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1097441/8e224a0e-6066-4a53-90bb-be0da37d988e_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DSTUJ+a+AVBnf7WVtoYGloWfKzO37BRHG4l91/XrH+c="></script>
+    nonce="KI5m2UgK+oJuSWdMBswKZ58CP+ZvhLMe2KfzpKjH25o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -708,7 +708,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
